src/main/java/com/example/stream/spring/courses/reactive/example/model/error/BuildingSuccess.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface BuildingSuccess extends Success permits BuildingDeleteOk {
}
